syntax = "proto3";
package coreum.asset.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
option go_package = "github.com/CoreumFoundation/coreum/x/asset/types";

message AirdropFungibleToken {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string id = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string sender = 2;
  string snapshot_id = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  int64 height = 4;
  string description = 5;
  string required_denom = 6;
  repeated cosmos.base.v1beta1.DecCoin offer = 7 [(gogoproto.nullable) = false];
}
